Revision history for HTML::StateTable

          - Update copyright year. Animate buttons in table render
          - Moved onReady function to utils
          - Rationalised JS package names
          - Renames JS files
          - Uses icons. Moves utf8 default characters to JS
          - Caption now optional first div
          - Fixes column reorder with selector in last column
          - Better errors. Modal popups. More buttons. Flexible tag names
          - Fixes resetting page to one when searching/filtering
          - Protection against Highcharts no being available
          - Unified dialog titles
          - Shiny buttons
          - Refreshing button styling
          - Better error handling
          - Set text colour in LESS
          - Only four table roles to doc
          - Only table roles left to POD
          - POD updates
          - Weakens request
          - Configurable now per user
          - Minor CSS improvements
          - Responsive tables
          - CSS fonts and svg icons
          - Starts animation role
          - Replaces rs store/fetch with util library calls
          - Adds tag sections
          - Adds messages to form role. Resets modifiers
          - Use unicode chars for bool cell trait
          - Adds bool cell trait
          - Adds support for the object view table
          - Chartable missing div fix
          - Row count fix
          - Weakened context reference. Nasty hack in renderer for top control
          - Switched to using less
          - Changed filterable control character
          - Fixes table row count usage
          - Warn of errors calling column info in foreign sort
          - Renderer captures render errors and returns them as text
          - StateChanged now a resultset method
          - Page and page size now table roles
          - Charts can locates left and right too
          - Tidies up naming of serialised keys
          - Charts refresh only when their state changes