@@ -20,6 +20,7 @@
     row-odd: linen;
     search-display-bg: gainsboro;
     search-display-shadow: rgba(255,255,255,0.6);
+    selected: orange;
     tag-bg: bisque;
     text: black;
     title-bg: linen;
